# ababot

./: .gitignore  Dockerfile  Pipfile  README.md  ababot.code-workspace  docker-compose.yml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-image-latest.yml  docker-image-release.yml  docker-image.yml  python-app.yml  testing.yml
ababot/: Cargo.toml
ababot/bot/: Cargo.toml
ababot/bot/gpu/gpgpu_tests/: collatz.wgsl  compute.wgsl  for_loop.wgsl
ababot/bot/src/: lib.rs  main.rs
ababot/bot/src/background_tasks/: abakus.rs  arran.rs  mod.rs  yr.rs
ababot/bot/src/background_tasks/abakus/: abakus.rs  mod.rs  types.rs
ababot/bot/src/background_tasks/lunch/: lunch.rs  lunch_task.rs  mod.rs
ababot/bot/src/background_tasks/yr/: image.rs  mod.rs  types.rs  yr.rs  yr_task.rs
ababot/bot/src/commands/: db.rs  dice.rs  game.rs  gaming.rs  knock.rs  mod.rs  ping.rs  remindme.rs  stonk.rs
ababot/bot/src/commands/food/: food_task.rs  mod.rs  modal_handler.rs  recipe_response.rs
ababot/bot/src/commands/kok/: download.rs  kok_task.rs  mod.rs  types.rs  upload.rs
ababot/bot/src/commands/quiz/: mod.rs  quiz_task.rs  types.rs
ababot/bot/src/commands/stonk/: mod.rs  stonk.rs  stonk_task.rs
ababot/bot/src/database/: load.rs  save.rs
ababot/bot/src/handlers/: mod.rs
ababot/bot/src/handlers/commands/: ping.rs
ababot/bot/src/types/: mod.rs  stonk.rs
ababot/bot/src/utils/: background_threads.rs  mod.rs  time.rs
ababot/bot/src/utils/gpgpu/: channels.rs  gpu.rs  mod.rs  worker.rs
ababot/dir_macros/: Cargo.toml
ababot/dir_macros/src/: lib.rs
src/: auth.py  discordBot.py  eventParser.py  getToken.py  helperFunctions.py  main.py  test_discordBot.py
src/cogs/abakus/: abakus.py  async_helpers.py  event.py  eventParser.py  event_parser.py  helperFunctions.py  helper_functions.py
src/cogs/abakus/templates/: eventTemplate.txt  reminderTemplate.txt
src/cogs/autism/: autism.py
src/cogs/cleaning/: cleaning.py
src/cogs/example/: example.py
src/cogs/help/: help.py
src/cogs/mover/: mover.py
src/cogs/soup/: codes.json  soup.py
src/templates/: eventRegexPattern.txt  eventTemplate.txt  reminderTemplate.txt
src/test/: test_discordBot.py
